# proto-tools

./: .bpt.env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEV.md  README.md  SYSTEM_PROMPT.md  __init__.py  environment.yml  pyproject.toml  setup.py
.claude/commands/: fix-issue.md  implement-tool.md
.environment_checks/: README.md  bviggiano_chimera_x86_64_h100.md  bviggiano_dgx_spark_arm64_gb10.md  viggiano_linux_ashleylab-h100_x86_64_h100.md  viggiano_sherlock_x86_64_sm90.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  claude-code-review.yml  claude.yml  docs_check.yml  flake8_check.yml  integration-tests.yml  lint_check.yml  release.yml  run-integration-tests.yml  run-unit-tests.yml  test-pip-install.yml  unit-tests.yml
bio_programming_tools/: __init__.py  logging_config.py
bio_programming_tools/tools/: README.md  TOOL_README_TEMPLATE.md  __init__.py  tool_registry.py
bio_programming_tools/utils/: __init__.py  _worker_bootstrap.py  auth.py  base_config.py  chemistry.py  cloud_dispatch.py  compute_deps.py  device.py  device_manager.py  env_manager.py  helpers.py  http_session.py  install_binary.py  logging_config.py  msa.py  persistent_worker.py  sequence.py  standalone_helpers.py  system_info.py  tool_cache.py  tool_instance.py  tool_io.py  tool_pool.py
bio_tools/: __init__.py  env_dev_notes.md
bio_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bio_tools/entities/: __init__.py
bio_tools/tools/: README.md  __init__.py  tool_registry.py
bio_tools_mcp/: __main__.py  prompts.py  resources.py  server.py  tools.py
docs/: device-management.mdx  docs.json  generate_docs.py  installation.mdx  introduction.mdx  quickstart.mdx  testing.md  tool-environments.md  tool-persistence.mdx  usage-guide.md
guides/: README.md  device_management.ipynb  parallel_execution.ipynb  tool_environments.ipynb  tool_persistence.ipynb
notes/: README.md  beta-welcome.md  dev.md  device-management.md  device_management_demo.ipynb  environment.md  error-handling.md  finding-tools.md  gated-models.md  homology-search-design.md  huggingface_token.md  logging.md  model-taste.md  model-weights.md  seeding.md  sherlock-setup.md  storage.md  testing.md  tool-environments.md  tool-persistence.md  tool_instance_example.ipynb  tool_pool_demo.ipynb  troubleshooting.md  usage-guide.md
notes/environments/: README.md  bviggiano_chimera_x86_64_h100.md  bviggiano_dgx_spark_arm64_cpu.md  bviggiano_dgx_spark_arm64_gb10.md  bviggiano_macosDarwin_arm64_cpu.md  danguo_linux_x86_64_h100.md  daniel.guo_chimera_x86_64_h100.md  root_macosDarwin_arm64_cpu.md  viggiano_linux_ashleylab-h100_x86_64_h100.md  viggiano_linux_x86_64_h100.md  viggiano_sherlock_x86_64_h100.md  viggiano_sherlock_x86_64_sm90.md
proto_tools/: __init__.py  agent_context.md  cli.py
proto_tools/cloud/: __init__.py
proto_tools/databases/: registry.py
proto_tools/entities/: __init__.py  antibody.py  complex.py  msa.py
proto_tools/tools/: README.md  TOOL_README_TEMPLATE.md  __init__.py  tool_registry.py
proto_tools/utils/: __init__.py  _worker_bootstrap.py  auth.py  base_config.py  chemistry.py  compute_deps.py  device.py  device_manager.py  export_names.py  foundation_env.py  gradient_models.py  http_session.py  install_binary.py  logging_config.py  msa.py  notebook_docs.py  persistent_worker.py  polling.py  progress.py  proto_home.py  sequence.py  system_info.py  tool_cache.py  tool_docs.py  tool_instance.py  tool_io.py  tool_pool.py
proto_tools_mcp/: __main__.py  prompts.py  resources.py  server.py  tools.py
scripts/: _pytest_collect_runnable.py  list_incomplete_tests.py  run_example_notebooks.py  smoke_interproscan_fetch.py
tests/: _structure_fixtures.py  conftest.py  test_blast.py  test_mmseqs.py  test_pyhmmer.py  test_rna_splicing.py
tests/binder_design_tests/: test_bindcraft_design.py  test_freebindcraft_design.py  test_germinal_design.py
tests/causal_models_tests/: test_causal_models_shared.py  test_evo1.py  test_evo2.py  test_progen2.py  test_progen3.py  test_shared_data_models.py
tests/database_retrieval_tests/: test_alphafold_db_fetch.py  test_alphamissense_fetch.py  test_ccd_lookup.py  test_ensembl_fetch.py  test_ensembl_vep.py  test_ensembl_workflow.py  test_ensembl_xrefs.py  test_interproscan_fetch.py  test_ncbi_fetch.py  test_pdb_fetch.py  test_pubchem_fetch.py  test_sequence_fetch.py  test_uniprot_fetch.py
tests/dummy_data/: create_mini_mmseqs_db.py  create_mini_mmseqs_db.sh
tests/functional_tests/: test_non_editable_install.py
tests/gene_annotation_tests/: test_blast.py  test_crispr_tracr.py  test_crispr_tracr_rna.py  test_meme_fimo_scan.py  test_minced.py  test_miranda_scan.py  test_mmseqs.py  test_promoter_calculator.py  test_pyhmmer.py
tests/inverse_folding_tests/: test_esm_if1.py  test_esmif.py  test_fampnn.py  test_if_schemas.py  test_ligandmpnn.py  test_proteinmpnn.py
tests/language_model_tests/: test_esm2.py  test_esm3.py  test_evo1.py  test_evo2.py  test_progen2.py
tests/ligand_tests/: ligand_inputs.py  test_ccd_utils.py  test_fragments.py  test_ligand.py  test_ligand_utils.py
tests/masked_models_tests/: test_ablang.py  test_ablang_germinal_gradient_unit.py  test_esm2.py  test_esm3.py  test_esmc.py  test_masked_model_schemas.py  test_projection.py  test_sampling.py
tests/mcp_tests/: conftest.py  test_citation_tools.py  test_discovery_tools.py  test_prompts.py  test_resources.py  test_schema_tools.py  test_search_tool.py
tests/mutagenesis_tests/: test_codons.py  test_random_nucleotide_sample.py  test_random_protein_sample.py
tests/orf_prediction_tests/: test_orfipy.py  test_prodigal.py
tests/rna_splicing_tests/: test_pangolin.py  test_rna_splicing.py  test_spliceai.py
tests/seed_tests/: test_seed_diversification.py  test_seed_reproducibility.py
tests/sequence_alignment_tests/: test_blast.py  test_gap_gini.py  test_local_colabfold_search.py  test_mafft.py  test_mmseqs2.py  (+5 more)
tool_tests/: test_blast.py  test_pyhmmer.py
tutorials/: 01_getting_started.ipynb  README.md
(+1747 files in other folders)
