[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto_tools"
version = "0.1.0"
description = "Bioinformatics tools for proto-language"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Proto Bio Team"}
]

requires-python = ">=3.10"

# Core dependencies
dependencies = [
    # Core framework
    "pydantic>=2.0.0",

    # Scientific computing
    "numpy>=1.20",
    "pandas>=1.5",
    "pyarrow",  # Required for pandas parquet support (chai1 MSA conversion)

    # Bioinformatics
    "biopython",
    "biotite>=0.38.0",
    "gemmi",

    # Chemistry & structure
    "rdkit",
    "py3Dmol",

    # Biology-specific tools
    "promotercalculator",

    # Notebooks & visualization
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "ipython",
    "ipymol",

    # Utilities
    "pyyaml",
    "requests",
    "tqdm",
    "filelock",
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-tools"
Repository = "https://github.com/evo-design/proto-tools"

[project.optional-dependencies]

# Development dependencies
dev = [
    # Testing
    "pytest>=7.3.0",        # --strict-markers requires 7.3+
    "pytest-asyncio>=0.21", # asyncio_mode="auto" requires 0.21+
    "pytest-cov>=4.1.0",
    "pytest-forked",        # Required on Sherlock (exclusive GPU process mode)
    "pytest-randomly>=3.15",

    # Code quality
    "ruff",
    "mypy",
    "types-requests",       # mypy stubs for requests
    "types-tqdm",           # mypy stubs for tqdm
    "types-PyYAML",         # mypy stubs for pyyaml

    # Documentation
    "docstring-parser",
]

# Dependencies: Run tests from parent proto-language context (install.sh or pip install -e ..[dev])

[tool.pytest.ini_options]
# Run from proto-tools root directory
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--durations=20",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "uses_gpu: mark test as requiring GPU. Optional arg: @pytest.mark.uses_gpu(n) skips unless n GPUs are visible",
    "uses_cpu: mark test as CPU-only",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests",
    "skip_ci: Skip test in GitHub Actions CI",
    "only_chimera: Test only runs on Chimera cluster (arc-slurm)",
    "exhaustive: Combinatorial tests (e.g., every tool × device transition). Skipped unless --exhaustive is passed",
    "test_on_platforms: mark test as requiring specific platform architectures. Args: architecture strings (e.g., 'x86_64', 'aarch64')",
    "include_in_env_report: Include test in --env-report. Requires kwargs: tool='tool-key', category='category_name'. Applied by test_env_report.py",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.coverage.run]
branch = true
source = ["proto_tools"]
omit = [
    "*/tests/*",
    "*/tool_envs/*",
    "*/standalone/*",
    "*/examples/*",
    # Tool implementation files require GPU or external services to test.
    # Coverage tracks infra (utils/, entities/, tool_registry) not tool wrappers.
    "proto_tools/tools/*/*/*.py",
    "*/_in_process_mode/*",
    # Subprocess entry point — only exercised by tool dispatch integration tests
    "proto_tools/utils/_worker_bootstrap.py",
    # Runs inside standalone tool envs during setup.sh
    "proto_tools/utils/install_binary.py",
    # Notebook generation utility — output-only, no test-path callers
    "proto_tools/utils/notebook_docs.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 68
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code", "deprecated"]
explicit_package_bases = true
exclude = [".*standalone/standalone_helpers\\.py$"]

[[tool.mypy.overrides]]
module = [
    # ML frameworks (not in core deps — need CUDA or standalone envs)
    "torch.*",
    "jax.*",
    "esm.*",
    "transformers.*",
    "flash_attn.*",
    # Installed but missing library stubs or py.typed marker
    "biotite.*",
    "py3Dmol.*",
    "pandas.*",
    "yaml.*",
    "huggingface_hub.*",
    "tokenizers.*",
    # Bioinformatics tools (only used in standalone/ dirs, not pip deps)
    "pyhmmer.*",
    "pyrodigal.*",
    "mdtraj.*",
    "RNA.*",
    # Tool-specific model packages (installed in standalone envs, not on PyPI)
    "standalone_helpers.*",
    "colabdesign.*",
    "colabfold.*",
    "evo.*",
    "evo2.*",
    "progen3.*",
    "vortex.*",
    "fampnn.*",
    "mpnn.*",
    "bioemu.*",
    "enformer_pytorch.*",
    "borzoi_pytorch.*",
    "alphagenome.*",
    "alphagenome_research.*",
    "axial_positional_embedding.*",
    "sinkhorn_transformer.*",
    "cuequivariance_ops_torch_cu12.*",
    # Local sibling imports in standalone dirs (resolved at runtime via sys.path)
    "inference.*",
    "model.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "tool_envs",
    "*/tool_envs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
    "**/examples",
    "**/*.ipynb",
    "notes",
]

[tool.ruff.lint]
select = [
    # ── Tier 1: Essential ─────────────────────────────────────────────
    "F",        # Pyflakes — unused imports/vars, undefined names
    "E",        # pycodestyle errors — comparison bugs, syntax
    "W",        # pycodestyle warnings — whitespace
    "I",        # isort — import ordering (fully auto-fixable)
    "UP",       # pyupgrade — modernize syntax (almost fully auto-fixable)
    "B",        # flake8-bugbear — mutable defaults, exception chaining
    "S",        # flake8-bandit — security (hardcoded creds, SQL injection, eval)
    "T20",      # flake8-print — debug print() left behind
    "ERA",      # eradicate — commented-out code
    "D",        # pydocstyle — Google convention docstring quality
    # ── Tier 2: Strongly recommended ──────────────────────────────────
    "SIM",      # flake8-simplify — collapse nested ifs, use builtins
    "C4",       # flake8-comprehensions — unnecessary list()/dict() wrappers
    "RET",      # flake8-return — clean up return patterns
    "PIE",      # flake8-pie — unnecessary pass, duplicate class fields
    "RUF",      # Ruff-specific — mutable defaults, missing f-prefix
    "PERF",     # Perflint — performance anti-patterns
    "FURB",     # refurb — modern Python idioms (fully auto-fixable)
    "PLE",      # Pylint errors — real bugs
    "PLW",      # Pylint warnings — subprocess without check
    "ARG",      # flake8-unused-arguments — dead parameters
    "TID",      # flake8-tidy-imports — import hygiene, ban relative imports
    "ASYNC",    # flake8-async — catches blocking calls in async functions
    "A",        # flake8-builtins — catch shadowing of Python builtins
]
ignore = [
    "E501",     # line too long — enforced by formatter when run manually
    "PLW1641",  # eq-without-hash — Pydantic models handle __hash__; non-Pydantic uses are intentional
    "D105",     # missing magic method docstring — __repr__, __eq__ are self-documenting
    "RUF022",   # unsorted-__all__ — keep logical grouping with section comments
    "A002",     # argument-shadowing-builtin — `format` param is intentional for export functions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is the whole point of tests
    "S105",     # hardcoded password strings ok in test fixtures
    "S106",     # hardcoded passwords ok in test fixtures
    "S110",     # try-except-pass ok in test cleanup
    "S112",     # try-except-continue ok in test loops
    "S202",     # tarfile.extractall ok in test fixtures
    "S310",     # URL open with arbitrary schemes ok in test fixtures
    "S311",     # random ok in tests (not cryptographic)
    "S603",     # subprocess calls in test fixtures
    "S607",     # partial executable paths in test fixtures
    "ERA001",   # commented-out test code sometimes intentional
    "B017",     # assert-raises-exception — test patterns
    "SIM117",   # multiple-with-statements — readability preference in tests
    "T20",      # print() used for test diagnostics
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",  # docstring presence rules relaxed in tests
    "ARG",      # pytest fixtures appear as unused arguments
]
"**/standalone/standalone_helpers.py" = ["F401"]
"**/standalone/*.py" = ["T20", "S", "PLW0602", "PLW0603", "E402", "PLW1510"]
"proto_tools/utils/install_binary.py" = ["T20", "S101", "S603", "S607"]
"proto_tools/utils/device.py" = ["T20", "PLW1510", "S603", "S607"]
"proto_tools/utils/proto_home.py" = ["T20"]
"proto_tools/utils/system_info.py" = ["PLW0603", "PLW1510", "S603", "S607"]
"proto_tools/utils/tool_instance.py" = ["S603", "S607"]
"proto_tools/utils/persistent_worker.py" = ["S101", "S603", "S607"]
"proto_tools/utils/tool_pool.py" = ["S101"]
# S101: type-narrowing asserts for mypy
"proto_tools/entities/ligands/ligands.py" = ["S101"]
"proto_tools/tools/causal_models/evo2/evo2_sample.py" = ["S101"]
"proto_tools/tools/masked_models/masking/base.py" = ["S101"]
"proto_tools/tools/mutagenesis/codons.py" = ["S101"]
"proto_tools/entities/ligands/ccd_maps/*.py" = ["T20"]
# Lazy imports behind conditionals are intentional in these tool files
"proto_tools/tools/structure_prediction/*/[!s]*.py" = ["E402"]
"proto_tools/tools/tool_registry.py" = ["E402", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["proto_tools"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_tools*"]

[tool.setuptools.package-data]
"*" = ["*.sh", "*.txt", "*.csv", "*.smi", "*.cif", "*.bib"]
