[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto_tools"
version = "0.0.0"
description = "A unified library of computational and AI tools for biology"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Proto Bio Team"}
]

requires-python = ">=3.10"

# Core dependencies
dependencies = [
    # Core framework
    "pydantic>=2.0.0",

    # Scientific computing
    "numpy>=1.20",
    "pandas>=1.5",
    "pyarrow",  # Required for pandas parquet support (chai1 MSA conversion)
    "umap-learn>=0.5.3",  # 2D projection of embedding outputs (CPU-side, lazy-imported)

    # Bioinformatics
    "biopython",
    "biotite>=0.38.0",
    "gemmi",

    # Chemistry & structure
    "rdkit!=2026.3.3",  # 2026.3.3's bundled rdchem.pyi stub is malformed and breaks mypy; drop when fixed upstream
    "py3Dmol",

    # Biology-specific tools
    "promotercalculator",

    # Notebooks & visualization
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "ipython",
    "ipymol",

    # Utilities
    "pyyaml",
    "requests",
    "tqdm",
    "filelock",
    "docstring-parser",  # Extract per-field docs from Google-style config docstrings
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-tools"
Repository = "https://github.com/evo-design/proto-tools"

[project.scripts]
# Agent/CLI entry point; also reachable via `python -m proto_tools`.
proto-tools = "proto_tools.cli:main"

[project.optional-dependencies]

# Cloud dispatch (device="cloud")
cloud = [
    "proto-client>=0.1.0",
]

# Development dependencies
dev = [
    # Testing
    "pytest>=7.3.0",        # --strict-markers requires 7.3+
    "pytest-asyncio>=0.21", # asyncio_mode="auto" requires 0.21+
    "pytest-cov>=4.1.0",
    "pytest-forked",        # Required on shared clusters running GPUs in exclusive process mode
    "pytest-randomly>=3.15",

    # Code quality
    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-requests",       # mypy stubs for requests
    "types-tqdm",           # mypy stubs for tqdm
    "types-PyYAML",         # mypy stubs for pyyaml
]

# Dependencies: Run tests from parent proto-language context (install.sh or pip install -e ..[dev])

[tool.pytest.ini_options]
# Run from proto-tools root directory
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--durations=20",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "uses_gpu: mark test as requiring GPU. Optional arg: @pytest.mark.uses_gpu(n) skips unless n GPUs are visible",
    "uses_cpu: mark test as CPU-only. Optional arg: @pytest.mark.uses_cpu(n) skips unless n CPUs are visible (matches the count ToolPool's _detect_cpus would see)",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests",
    "skip_ci: Skip test in GitHub Actions CI",
    "extensive: Combinatorial tests (e.g., every tool × device transition). Skipped unless --ext (or --extensive) is passed",
    "benchmark: Marks the e2e benchmark test for a tool. Required arg: tool_key, e.g. @pytest.mark.benchmark('esm2-embedding'). Skipped by default; opt in additively via --benchmark (or --benchmark-report / --benchmark-tool / --benchmark-toolkit). NOT enabled by --all or --slow.",
    "test_on_platforms: mark test as requiring specific platform architectures. Args: architecture strings (e.g., 'x86_64', 'aarch64')",
    "include_in_env_report: Include test in --env-report. Requires kwargs: tool='tool-key', category='category_name'. Applied by test_env_report.py",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.coverage.run]
branch = true
source = ["proto_tools"]
omit = [
    "*/tests/*",
    "*/tool_envs/*",
    "*/standalone/*",
    "*/examples/*",
    # Tool implementation files require GPU or external services to test.
    # Coverage tracks infra (utils/, entities/, tool_registry) not tool wrappers.
    "proto_tools/tools/*/*/*.py",
    # Subprocess entry point — only exercised by tool dispatch integration tests
    "proto_tools/utils/_worker_bootstrap.py",
    # Runs inside standalone tool envs during setup.sh
    "proto_tools/utils/install_binary.py",
    # Notebook generation utility — output-only, no test-path callers
    "proto_tools/utils/notebook_docs.py",
    # Logging setup — stdlib wrappers, bugs visible as missing log output
    "proto_tools/utils/logging_config.py",
    # Progress spinners — threading/display code, tested manually
    "proto_tools/utils/progress.py",
    # System info collection — reporting/diagnostics, not business logic
    "proto_tools/utils/system_info.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code", "deprecated"]
explicit_package_bases = true
exclude = [
    ".*standalone/standalone_helpers/.*",
    ".*standalone/standalone_helpers\\.py$",
    # ccd_lookup standalone uses rdkit/pdbeccdutils/gemmi (only available in
    # the tool's micromamba env); their stubs are incomplete or missing.
    ".*ccd_lookup/standalone/run\\.py$",
    # Vendored Malinois architecture code is untyped reference model code.
    ".*malinois/standalone/malinois_scoring\\.py$",
    # Vendored upstream ipSAE script (Dunbrack lab) is untyped reference code.
    ".*ipsae/standalone/ipsae\\.py$",
]

[[tool.mypy.overrides]]
module = [
    # ML frameworks (not in core deps — need CUDA or standalone envs)
    "torch.*",
    "jax.*",
    "esm.*",
    "transformers.*",
    "flash_attn.*",
    # Installed but missing library stubs or py.typed marker
    "py3Dmol.*",
    "pymol.*",
    "pandas.*",
    "yaml.*",
    "huggingface_hub.*",
    "tokenizers.*",
    # Optional cloud extra (not in core deps)
    "proto_client.*",
    # Bioinformatics tools (only used in standalone/ dirs, not pip deps)
    "pyhmmer.*",
    "pymemesuite.*",
    "pyrodigal.*",
    "mdtraj.*",
    "RNA.*",
    "rdkit.*",
    "pdbeccdutils.*",
    "gemmi.*",
    "mini3di.*",
    "faiss.*",
    "affine_gaps.*",
    # Tool-specific model packages (installed in standalone envs, not on PyPI)
    "standalone_helpers.*",
    "boltz.*",
    "ablang2.*",
    "colabdesign.*",
    "colabfold.*",
    "evo.*",
    "evo2.*",
    "progen3.*",
    "vortex.*",
    "fampnn.*",
    "mpnn.*",
    "bioemu.*",
    "enformer_pytorch.*",
    "borzoi_pytorch.*",
    "pangolin.*",
    "alphagenome.*",
    "alphagenome_research.*",
    "axial_positional_embedding.*",
    "sinkhorn_transformer.*",
    "cuequivariance_ops_torch_cu12.*",
    "pyrosetta.*",
    "scipy.*",
    "umap.*",
    "hydra.*",
    # SpliceAI (TensorFlow/Keras model, only installed in the spliceai standalone env)
    "tensorflow.*",
    "keras.*",
    "spliceai.*",
    # Local sibling imports in standalone dirs (resolved at runtime via sys.path)
    "inference.*",
    "malinois_scoring",
    "malinois_scoring.*",
    "model.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Newer biotite ships a py.typed marker with a generic ``AtomArray``, but the
# codebase treats biotite structures as untyped (bare ``AtomArray``). Skip
# following it so its generic-type requirements don't leak into mypy strict.
module = ["biotite.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "tool_envs",
    "*/tool_envs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
    "**/examples",
    "**/*.ipynb",
    "notes",
]

[tool.ruff.lint]
select = [
    # ── Tier 1: Essential ─────────────────────────────────────────────
    "F",        # Pyflakes — unused imports/vars, undefined names
    "E",        # pycodestyle errors — comparison bugs, syntax
    "W",        # pycodestyle warnings — whitespace
    "I",        # isort — import ordering (fully auto-fixable)
    "UP",       # pyupgrade — modernize syntax (almost fully auto-fixable)
    "B",        # flake8-bugbear — mutable defaults, exception chaining
    "S",        # flake8-bandit — security (hardcoded creds, SQL injection, eval)
    "T20",      # flake8-print — debug print() left behind
    "ERA",      # eradicate — commented-out code
    "D",        # pydocstyle — Google convention docstring quality
    # ── Tier 2: Strongly recommended ──────────────────────────────────
    "SIM",      # flake8-simplify — collapse nested ifs, use builtins
    "C4",       # flake8-comprehensions — unnecessary list()/dict() wrappers
    "RET",      # flake8-return — clean up return patterns
    "PIE",      # flake8-pie — unnecessary pass, duplicate class fields
    "RUF",      # Ruff-specific — mutable defaults, missing f-prefix
    "PERF",     # Perflint — performance anti-patterns
    "FURB",     # refurb — modern Python idioms (fully auto-fixable)
    "PLE",      # Pylint errors — real bugs
    "PLW",      # Pylint warnings — subprocess without check
    "ARG",      # flake8-unused-arguments — dead parameters
    "TID",      # flake8-tidy-imports — import hygiene, ban relative imports
    "ASYNC",    # flake8-async — catches blocking calls in async functions
    "A",        # flake8-builtins — catch shadowing of Python builtins
]
ignore = [
    "E501",     # line too long — enforced by formatter when run manually
    "PLW1641",  # eq-without-hash — Pydantic models handle __hash__; non-Pydantic uses are intentional
    "D105",     # missing magic method docstring — __repr__, __eq__ are self-documenting
    "RUF022",   # unsorted-__all__ — keep logical grouping with section comments
    "A002",     # argument-shadowing-builtin — `format` param is intentional for export functions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is the whole point of tests
    "S105",     # hardcoded password strings ok in test fixtures
    "S106",     # hardcoded passwords ok in test fixtures
    "S110",     # try-except-pass ok in test cleanup
    "S112",     # try-except-continue ok in test loops
    "S202",     # tarfile.extractall ok in test fixtures
    "S310",     # URL open with arbitrary schemes ok in test fixtures
    "S311",     # random ok in tests (not cryptographic)
    "S603",     # subprocess calls in test fixtures
    "S607",     # partial executable paths in test fixtures
    "ERA001",   # commented-out test code sometimes intentional
    "B017",     # assert-raises-exception — test patterns
    "SIM117",   # multiple-with-statements — readability preference in tests
    "T20",      # print() used for test diagnostics
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",  # docstring presence rules relaxed in tests
    "ARG",      # pytest fixtures appear as unused arguments
]
"**/standalone_helpers/__init__.py" = ["F401", "TID252"]  # re-exports; relative imports needed for copy-into-subprocess pattern
"**/standalone_helpers/*.py" = ["TID252"]  # relative imports needed for copy-into-subprocess pattern
"**/standalone/*.py" = ["T20", "S", "PLW0602", "PLW0603", "E402", "PLW1510"]
"proto_tools/utils/install_binary.py" = ["T20", "S101", "S603", "S607"]
"proto_tools/utils/device.py" = ["T20", "PLW1510", "S603", "S607"]
"proto_tools/utils/proto_home.py" = ["T20"]
"scripts/*.py" = ["T20", "S603", "S607"]  # dev helper scripts: prints are intentional, subprocess calls use literal argv
"proto_tools/cli.py" = ["T20"]  # CLI entry point: print() is the right way to emit to stdout
"proto_tools/__main__.py" = ["T20"]  # python -m proto_tools entry point
"proto_tools/tools/sequence_alignment/mmseqs2/setup_databases.py" = ["T20", "S603", "S607", "PERF203"]  # user-facing provisioning CLI
"proto_tools/utils/system_info.py" = ["PLW0603", "PLW1510", "S603", "S607"]
"proto_tools/utils/tool_instance.py" = ["S101", "S603", "S607"]
"proto_tools/utils/foundation_env.py" = ["S603", "S607"]
"proto_tools/utils/persistent_worker.py" = ["S101", "S603", "S607"]
"proto_tools/utils/tool_pool.py" = ["S101"]
# S101: type-narrowing asserts for mypy
"proto_tools/entities/ligands/ligands.py" = ["S101"]
"proto_tools/entities/antibody.py" = ["S101"]
"proto_tools/tools/causal_models/evo2/evo2_sample.py" = ["S101"]
"proto_tools/tools/sequence_alignment/mmseqs2/homology_search.py" = ["S101"]
"proto_tools/tools/sequence_alignment/mmseqs2/search_proteins.py" = ["S101"]
"proto_tools/transforms/masking/base.py" = ["S101"]
"proto_tools/tools/mutagenesis/codons.py" = ["S101"]
"proto_tools/entities/ligands/ccd_maps/*.py" = ["T20"]
# Lazy imports behind conditionals are intentional in these tool files
"proto_tools/tools/structure_prediction/*/[!s]*.py" = ["E402"]
"proto_tools/tools/tool_registry.py" = ["E402", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["proto_tools"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_tools*"]

[tool.setuptools.package-data]
# *.md / *.ipynb ship per-tool READMEs + example notebooks so tool_docs works on a non-editable install.
"*" = ["*.sh", "*.txt", "*.csv", "*.smi", "*.cif", "*.bib", "*.yaml", "*.md", "*.ipynb", "*.pkl"]
