[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-tools"
version = "0.1.0"
description = "A unified library of computational and AI tools for biology"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Proto Team"},
    {name = "Ben Viggiano"},
    {name = "Daniel Guo"},
    {name = "Lucas Brennan-Almaraz"},
    {name = "Brian Hie"},
    {name = "Aditi Merchant"},
]
maintainers = [
    {name = "Proto Team"},
    {name = "Ben Viggiano"},
    {name = "Daniel Guo"},
    {name = "Lucas Brennan-Almaraz"},
    {name = "Brian Hie"},
    {name = "Aditi Merchant"},
]

requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",

    "numpy>=1.20",
    "pandas>=1.5",
    "pyarrow",
    "umap-learn>=0.5.3",
    "numba>=0.60.0",

    "biopython",
    "biotite>=0.38.0",
    "gemmi",

    "rdkit!=2026.3.3",
    "py3Dmol",

    "promotercalculator",

    "jupyter",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "ipython",
    "ipymol",

    "pyyaml",
    "requests",
    "tqdm",
    "filelock",
    "docstring-parser",
    "proto-client>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-tools"
Repository = "https://github.com/evo-design/proto-tools"
Documentation = "https://proto.evodesign.org/docs/tools/introduction"
Issues = "https://github.com/evo-design/proto-tools/issues"

[project.scripts]
proto-tools = "proto_tools.cli:main"

[project.optional-dependencies]

dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1.0",
    "pytest-forked",
    "pytest-randomly>=3.15",

    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-requests",
    "types-tqdm",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--durations=20",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "uses_gpu: mark test as requiring GPU. Optional arg: @pytest.mark.uses_gpu(n) skips unless n GPUs are visible",
    "uses_cpu: mark test as CPU-only. Optional arg: @pytest.mark.uses_cpu(n) skips unless n CPUs are visible (matches the count ToolPool's _detect_cpus would see)",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests",
    "skip_ci: Skip test in GitHub Actions CI",
    "extensive: Combinatorial tests (e.g., every tool × device transition). Skipped unless --ext (or --extensive) is passed",
    "benchmark: Marks the e2e benchmark test for a tool. Required arg: tool_key, e.g. @pytest.mark.benchmark('esm2-embedding'). Skipped by default; opt in additively via --benchmark (or --benchmark-report / --benchmark-tool / --benchmark-toolkit). NOT enabled by --all or --slow.",
    "test_on_platforms: mark test as requiring specific platform architectures. Args: architecture strings (e.g., 'x86_64', 'aarch64')",
    "include_in_env_report: Include test in --env-report. Requires kwargs: tool='tool-key', category='category_name'. Applied by test_env_report.py",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.coverage.run]
branch = true
source = ["proto_tools"]
omit = [
    "*/tests/*",
    "*/tool_envs/*",
    "*/standalone/*",
    "*/examples/*",
    "proto_tools/tools/*/*/*.py",
    "proto_tools/utils/_worker_bootstrap.py",
    "proto_tools/utils/install_binary.py",
    "proto_tools/utils/notebook_docs.py",
    "proto_tools/utils/logging_config.py",
    "proto_tools/utils/progress.py",
    "proto_tools/utils/system_info.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code", "deprecated"]
explicit_package_bases = true
exclude = [
    ".*standalone/standalone_helpers/.*",
    ".*standalone/standalone_helpers\\.py$",
    ".*ccd_lookup/standalone/run\\.py$",
    ".*malinois/standalone/malinois_scoring\\.py$",
    ".*ipsae/standalone/ipsae\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "jax.*",
    "esm.*",
    "transformers.*",
    "flash_attn.*",
    "py3Dmol.*",
    "pymol.*",
    "pandas.*",
    "yaml.*",
    "huggingface_hub.*",
    "tokenizers.*",
    "proto_client.*",
    "pyhmmer.*",
    "pymemesuite.*",
    "pyrodigal.*",
    "mdtraj.*",
    "RNA.*",
    "rdkit.*",
    "pdbeccdutils.*",
    "gemmi.*",
    "mini3di.*",
    "faiss.*",
    "affine_gaps.*",
    "standalone_helpers.*",
    "boltz.*",
    "ablang2.*",
    "colabdesign.*",
    "colabfold.*",
    "evo.*",
    "evo2.*",
    "progen3.*",
    "vortex.*",
    "fampnn.*",
    "mpnn.*",
    "bioemu.*",
    "enformer_pytorch.*",
    "borzoi_pytorch.*",
    "pangolin.*",
    "alphagenome.*",
    "alphagenome_research.*",
    "axial_positional_embedding.*",
    "sinkhorn_transformer.*",
    "cuequivariance_ops_torch_cu12.*",
    "pyrosetta.*",
    "scipy.*",
    "umap.*",
    "hydra.*",
    "tensorflow.*",
    "keras.*",
    "spliceai.*",
    "inference.*",
    "malinois_scoring",
    "malinois_scoring.*",
    "model.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["biotite.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "tool_envs",
    "*/tool_envs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
    "**/examples",
    "**/*.ipynb",
    "notes",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "S",
    "T20",
    "ERA",
    "D",
    "SIM",
    "C4",
    "RET",
    "PIE",
    "RUF",
    "PERF",
    "FURB",
    "PLE",
    "PLW",
    "ARG",
    "TID",
    "ASYNC",
    "A",
]
ignore = [
    "E501",
    "PLW1641",
    "D105",
    "RUF022",
    "A002",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "S110",
    "S112",
    "S202",
    "S310",
    "S311",
    "S603",
    "S607",
    "ERA001",
    "B017",
    "SIM117",
    "T20",
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",
    "ARG",
]
"**/standalone_helpers/__init__.py" = ["F401", "TID252"]
"**/standalone_helpers/*.py" = ["TID252"]
"**/standalone/*.py" = ["T20", "S", "PLW0602", "PLW0603", "E402", "PLW1510"]
"proto_tools/utils/install_binary.py" = ["T20", "S101", "S603", "S607"]
"proto_tools/utils/device.py" = ["T20", "PLW1510", "S603", "S607"]
"proto_tools/utils/proto_home.py" = ["T20"]
"scripts/*.py" = ["T20", "S603", "S607"]
"proto_tools/cli.py" = ["T20"]
"proto_tools/__main__.py" = ["T20"]
"proto_tools/tools/sequence_alignment/mmseqs2/setup_databases.py" = ["T20", "S603", "S607", "PERF203"]
"proto_tools/utils/system_info.py" = ["PLW0603", "PLW1510", "S603", "S607"]
"proto_tools/utils/tool_instance.py" = ["S101", "S603", "S607"]
"proto_tools/utils/foundation_env.py" = ["S603", "S607"]
"proto_tools/utils/persistent_worker.py" = ["S101", "S603", "S607"]
"proto_tools/utils/tool_pool.py" = ["S101"]
"proto_tools/entities/ligands/ligands.py" = ["S101"]
"proto_tools/entities/antibody.py" = ["S101"]
"proto_tools/tools/causal_models/evo2/evo2_sample.py" = ["S101"]
"proto_tools/tools/sequence_alignment/mmseqs2/homology_search.py" = ["S101"]
"proto_tools/tools/sequence_alignment/mmseqs2/search_proteins.py" = ["S101"]
"proto_tools/transforms/masking/base.py" = ["S101"]
"proto_tools/tools/mutagenesis/codons.py" = ["S101"]
"proto_tools/entities/ligands/ccd_maps/*.py" = ["T20"]
"proto_tools/tools/structure_prediction/*/[!s]*.py" = ["E402"]
"proto_tools/tools/tool_registry.py" = ["E402", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["proto_tools"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_tools*"]

[tool.setuptools.package-data]
"*" = ["*.sh", "*.txt", "*.csv", "*.smi", "*.cif", "*.bib", "*.yaml", "*.md", "*.ipynb", "*.pkl", "*.pdb", "*.a3m", "*.fasta", "*.hmm", "*.meme", "*.json", "py.typed"]
